Fix minor overlap

--- a/css/projects_styles.css
+++ b/css/projects_styles.css
@@ -174,6 +174,7 @@ li {
   flex-direction: column;
   height: 20vh;
   row-gap: 10px;
+  margin-bottom: 10px;
 }
 
 .menu {
